--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -23,14 +23,10 @@
                 #dt
                 [value]="stockInList"
                 responsiveLayout="scroll"
-                [rows]="10"
-                [paginator]="true"
-                [rowsPerPageOptions]="[10, 20, 30]"
-                [showCurrentPageReport]="true"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                selectionMode="multiple"
+                [rows]="pageSize"
+                [first]="pageNumber * pageSize"
+                [paginator]="false"
                 [rowHover]="true"
-                dataKey="id"
             >
                 <!-- [(selection)]="selectedProducts" -->
                 <ng-template pTemplate="caption">
@@ -48,9 +44,7 @@
                                 <input
                                     pInputText
                                     type="text"
-                                    [(ngModel)]="
-                                        this.optionsFilterStockIn.KeyWord
-                                    "
+                                    [(ngModel)]="code"
                                     placeholder="Tìm theo mã nhập kho"
                                     style="width: 350px"
                                     class="sm:"
@@ -68,6 +62,7 @@
                                 [(ngModel)]="deadlineRange"
                                 selectionMode="range"
                                 [showIcon]="true"
+                                [showClearButton]="true"
                                 (onBlur)="blurDateRange()"
                                 [dateFormat]="this.formatdate"
                             ></p-calendar>
@@ -146,6 +141,16 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <div *ngIf="stockInList?.length > 0">
+                <p-paginator
+                    [rows]="pageSize"
+                    (onPageChange)="onPageChange($event)"
+                    [totalRecords]="
+                        totalRecordsCount > 0 ? totalRecordsCount : 1
+                    "
+                    [rowsPerPageOptions]="[10, 20, 30]"
+                ></p-paginator>
+            </div>
         </div>
     </div>
 </div>
@@ -175,7 +180,7 @@
                 <div class="card p-0" style="height: 280px">
                     <p-table
                         #dt
-                        [value]="stockInItemDetail.inventoryStockInDetails"
+                        [value]="stockInItemDetail?.inventoryStockInDetails"
                         responsiveLayout="scroll"
                         [rowHover]="true"
                         dataKey="id"
@@ -199,14 +204,33 @@
                                 </td>
                                 <td style="width: 8%">
                                     <img
+                                        *ngIf="data.productImage"
                                         [src]="imageUrl + data.productImage"
                                         alt="Product Image"
-                                        style="
-                                            width: 50px;
-                                            height: 50px;
-                                            border-radius: 4px;
-                                        "
                                     />
+
+                                    <svg
+                                        *ngIf="!data.productImage"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        class="jss3869 ng-star-inserted"
+                                        style="
+                                            color: rgb(232, 234, 235);
+                                            height: 50px;
+                                        "
+                                    >
+                                        <path
+                                            _ngcontent-ng-c1628733639=""
+                                            d="M19 3H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2ZM5 19V5h14l.002 14H5Z"
+                                            fill="currentColor"
+                                        ></path>
+                                        <path
+                                            _ngcontent-ng-c1628733639=""
+                                            d="m10 14-1-1-3 4h12l-5-7-3 4ZM8.5 11a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
+                                            fill="currentColor"
+                                        ></path>
+                                    </svg>
                                 </td>
                                 <td style="width: 15.5%">
                                     {{ data.productName }}
@@ -270,7 +294,7 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-end"
                                 >
                                     <span>{{
-                                        stockInItemDetail.subQuantity
+                                        stockInItemDetail?.subQuantity
                                     }}</span>
                                 </div>
                             </div>
@@ -282,7 +306,7 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-end"
                                 >
                                     <span>{{
-                                        stockInItemDetail.total
+                                        stockInItemDetail?.total
                                             | currency
                                                 : "VND"
                                                 : "symbol"
@@ -298,7 +322,7 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-end"
                                 >
                                     <span>{{
-                                        stockInItemDetail.totalDiscount
+                                        stockInItemDetail?.totalDiscount
                                             | currency
                                                 : "VND"
                                                 : "symbol"
@@ -314,8 +338,8 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-end"
                                 >
                                     <span>{{
-                                        stockInItemDetail.total -
-                                            stockInItemDetail.totalDiscount
+                                        stockInItemDetail?.total -
+                                            stockInItemDetail?.totalDiscount
                                             | currency
                                                 : "VND"
                                                 : "symbol"
@@ -331,8 +355,8 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-end"
                                 >
                                     <span>{{
-                                        stockInItemDetail.total -
-                                            stockInItemDetail.totalDiscount
+                                        stockInItemDetail?.total -
+                                            stockInItemDetail?.totalDiscount
                                             | currency
                                                 : "VND"
                                                 : "symbol"
@@ -358,7 +382,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-start"
                                 >
-                                    <span>{{ stockInItemDetail.code }}</span>
+                                    <span>{{ stockInItemDetail?.code }}</span>
                                 </div>
                             </div>
                             <div class="field grid">
@@ -391,7 +415,7 @@
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-start"
                                 >
                                     <span>{{
-                                        stockInItemDetail.createdAt
+                                        stockInItemDetail?.createdAt
                                             | date : "dd/MM/yyyy HH:mm:ss"
                                     }}</span>
                                 </div>
