--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -119,14 +119,14 @@
           >
             <ng-template pTemplate="header">
               <tr style="height: 60px" class="n-title-head">
-                <th style="width: 5%; padding-left: 20px">
+                <!-- <th style="width: 5%; padding-left: 20px">
                   <p-checkbox
                     [(ngModel)]="checked"
                     [binary]="true"
                     inputId="binary"
                   ></p-checkbox>
-                </th>
-                <th style="width: 6%">Ảnh</th>
+                </th> -->
+                <th style="width: 10%">Ảnh</th>
                 <th style="width: 17%">Sản phẩm</th>
                 <th style="width: 12%">Phân loại hàng</th>
                 <th style="width: 10%; text-align: right">Giá bán</th>
@@ -146,9 +146,9 @@
                   position: relative;
                 "
               >
-                <td style="padding-left: 20px">
+                <!-- <td style="padding-left: 20px">
                   <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                </td>
+                </td> -->
                 <td class="n-image-product">
                   <img [src]="imageUrl+ '/api/files/images/'  + (product.productImages[0] ? product.productImages[0].link : 'no-image.png')" />
                 </td>
@@ -175,7 +175,7 @@
                 </td> -->
                 <td>
                   <div
-                    style="margin: 15px 0; height: 23px"
+                    style="margin: 16px 0; height: 23px"
                     *ngFor="
                       let variant of this.showAllVariants.get(product.id) === 0 ||
                       this.showAllVariants.get(product.id) === 2
