--- a/src/app/components/pages/products/update-product/update-product.component.html
+++ b/src/app/components/pages/products/update-product/update-product.component.html
@@ -221,6 +221,7 @@
                                         placeholder="Nhập giá bán"
                                         maxlength="100"
                                         (keypress)="onKeyPressPrice($event)"
+                                        (blur)="formatCurrencySell()"
                                         /> 
                                     </div>
                                     <div class="col-lg-4">
@@ -234,6 +235,7 @@
                                             placeholder="Nhập giá nhập"
                                             maxlength="100"
                                             (keypress)="onKeyPress($event)"
+                                            (blur)="formatCurrencyIm()"
                                             /> 
                                     </div>             
                                 </div>
@@ -836,7 +838,7 @@
             <button
                 type="submit"
                 pButton
-                label="Thêm mới"
+                label="Lưu"
                 class="p-button-primary"></button>
         </div>
     </div>
