--- a/src/app/components/pages/warehouse/stock-in/show/show.component.css
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.css
@@ -12,3 +12,32 @@
 .close:hover {
     background-color: #e6e4e4;
 }
+.code{
+    cursor: pointer;
+}
+
+.code:hover{
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+.variant-item-label{
+        font-size: 13px;
+            padding: 5px 10px;
+            border-radius: 20px;
+            background-color: #2a2a82;
+            color: #fff;
+            height: -moz-fit-content;
+            height: fit-content;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+}
+
+.variant-item{
+        display: flex;
+            gap: 10px;
+            padding: 3px;
+            align-items: center;
+            margin-bottom: 10px;
+}
