--- a/src/app/components/pages/products/update-product/update-product.component.html
+++ b/src/app/components/pages/products/update-product/update-product.component.html
@@ -162,12 +162,11 @@
                                         formControlName="barcode"
                                         placeholder="Nhập mã vạch"
                                         maxlength="100"
-                                        (input)="onInput1($event)"
                                         (keypress)="onKeyPress($event)"
                                         />
-                                        <div *ngIf="showNameError12" class="error-message">
+                                        <!-- <div *ngIf="showNameError12" class="error-message">
                                           {{ errorMessage }}
-                                        </div> 
+                                        </div>  -->
                                     </div>
                                     <div class="col-lg-4">
                                       <label class="labelip">Khối lượng</label>
@@ -209,22 +208,35 @@
                                                 placeholder="Nhập đơn vị"
                                                 maxlength="100"
                                             /> 
+                                    </div>                               
+                                    <div class="col-lg-4" *ngIf="productById.productVariants.length === 0 && !formattedSellingPrice || isEditMode">
+                                      <label class="labelip">Giá bán </label>
+                                      <input
+                                          type="text"
+                                          class="form-control"
+                                          pInputText
+                                          [style]="{ height: '40px', width: '100%' }"
+                                          formControlName="sellingPrice"
+                                          placeholder="Nhập giá bán"
+                                          maxlength="100"
+                                          (keypress)="onKeyPressPrice($event)"
+                                          (blur)="convertToCurrency()"
+                                      />
                                     </div>
-                                    <div class="col-lg-4" *ngIf="productById.productVariants.length === 0">
-                                        <label class="labelip">Giá bán </label>
+                                  
+                                    <div class="col-lg-4" *ngIf="formattedSellingPrice && !isEditMode">
+                                        <label class="labelip">Giá bán</label>
                                         <input
-                                        type="text"
-                                        class="form-control"
-                                        pInputText
-                                        [style]="{ height: '40px', width: '100%' }"
-                                        formControlName="sellingPrice"
-                                        placeholder="Nhập giá bán"
-                                        maxlength="100"
-                                        (keypress)="onKeyPressPrice($event)"
-                                        (blur)="formatCurrencySell()"
-                                        /> 
+                                            type="text"
+                                            class="form-control"
+                                            [style]="{ height: '40px', width: '100%' }"
+                                            [value]="formattedSellingPrice"
+                                            readonly
+                                            (click)="toggleEditMode()"
+                                        />
                                     </div>
-                                    <div class="col-lg-4">
+                                    
+                                    <div class="col-lg-4"  *ngIf="!formattedImPrice || isEditMode2">
                                         <label class="labelip">Giá nhập</label>
                                         <input
                                             type="text"
@@ -235,8 +247,19 @@
                                             placeholder="Nhập giá nhập"
                                             maxlength="100"
                                             (keypress)="onKeyPress($event)"
-                                            (blur)="formatCurrencyIm()"
-                                            /> 
+                                            (blur)="convertToCurrency2()"
+                                        />                                      
+                                    </div> 
+                                    <div  class="col-lg-4" *ngIf="formattedImPrice && !isEditMode2">
+                                      <label class="labelip">Giá nhập</label>
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            [style]="{ height: '40px', width: '100%' }"
+                                            [value]="formattedImPrice"
+                                            readonly
+                                            (click)="toggleEditMode2()"
+                                        />
                                     </div>             
                                 </div>
                             </div>                     
@@ -792,13 +815,14 @@
                                               />
                                               
                                             </td>
-                                            <td>
+                                            <td *ngIf="!formattedPrices[i][j] || isEditMode3[i][j]">
                                               <input
                                                 class="form-control"
                                                 type="text"
                                                 [formControlName]="getPriceControlName(i, j)"
                                                 (keypress)="onKeyPress($event)"
                                                 [style]="{ height: '35px', width: '200px' }"
+                                                (blur)="convertPriceToCurrency(i, j)"
                                               />
                                               <div
                                                 *ngIf="getPriceControlError(i, j)"
@@ -806,6 +830,16 @@
                                               >
                                                 {{ getPriceControlError(i, j) }}
                                               </div>
+                                            </td>
+                                            <td *ngIf="formattedPrices[i][j] && !isEditMode3[i][j]">
+                                              <input
+                                                  class="form-control"
+                                                  type="text"
+                                                  [value]="formattedPrices[i][j]"
+                                                  readonly
+                                                  [style]="{ height: '35px', width: '200px' }"
+                                                  (click)="toggleEditMode3(i, j)"
+                                              />
                                             </td>
                                             <td  *ngIf="productForm.get('productType').value === 0">
                                               <input
@@ -834,12 +868,60 @@
                 pRipple
                 type="button"
                 label="Hủy"
-                class="p-button-outlined"></button>
+                class="p-button-outlined"
+                (click)="openDialog3()"></button>
             <button
                 type="submit"
                 pButton
                 label="Lưu"
                 class="p-button-primary"></button>
+        </div>
+
+        <div class="dialog-background" *ngIf="showDialog3">
+          <div class="dialog-container-customerdelete">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Xác nhận</h5>
+                <p-button
+                  icon="pi pi-times"
+                  [rounded]="true"
+                  [text]="true"
+                  severity="danger"
+                  [style]="{ 'border-radius': '25%' }"
+                  (click)="closeDialog3()"
+                ></p-button>
+              </div>
+              <!-- General Form Elements -->
+              <form>
+                <div class="row mb-12">
+                  <label
+                    >Dữ liệu sẽ không được lưu lại, bạn có chắc muốn thoát?</label
+                  >
+                </div>
+                <div class="row mb-12 mt-5">
+                  <div class="col-sm-12 buttonsl">
+                    <button
+                      pButton
+                      pRipple
+                      label="Hủy"
+                      class="p-button-success buttoncloses"
+                      type="button"
+                      (click)="closeDialog3()"
+                    ></button>
+                    <button
+                      pButton
+                      pRipple
+                      label="Đồng ý"
+                      class="p-button-success buttondelete"
+                      type="button"
+                      [routerLink]="['/products/show-product']"
+                    ></button>
+                  </div>
+                </div>
+              </form>
+              <!-- End General Form Elements -->
+            </div>
+          </div>
         </div>
     </div>
 </form>
