--- a/src/app/components/pages/products/update-product/update-product.component.html
+++ b/src/app/components/pages/products/update-product/update-product.component.html
@@ -801,7 +801,7 @@
                                                   type="text"
                                                   [formControlName]="getSkuControlName(i, j)"
                                                   [style]="{ height: '35px', width: '200px' }"
-                                                  (input)="onInput3($event)"
+                                                  (input)="onInput3($event); onSkuInput($event, i, j); onSKUInput2($event, i, j)"
                                                 />
                                             </td>
                                             <td>
@@ -810,10 +810,9 @@
                                                 type="text"
                                                 [formControlName]="getBarcodeControlName(i, j)"
                                                 (keypress)="onKeyPress($event)"
-                                                (input)="onInput2($event)"
+                                                (input)="onInput2($event); onBarcodeInput($event, i, j); onBarcodeInput2($event, i, j)"
                                                 [style]="{ height: '35px', width: '200px' }"
-                                              />
-                                              
+                                              />                              
                                             </td>
                                             <td *ngIf="!formattedPrices[i][j] || isEditMode3[i][j]">
                                               <input
