--- a/src/app/components/pages/user/user.component.html
+++ b/src/app/components/pages/user/user.component.html
@@ -1,1 +1,338 @@
-<p>user works!</p>
+<main id="main" class="main">
+    <div class="pagetitle">
+        <div>
+          <h3>Quản lý tài khoản</h3>
+          <nav>
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Admin</a></li>
+              <li class="breadcrumb-item">Quản lý</li>
+              <li class="breadcrumb-item active">Quản lý tài khoản</li>
+            </ol>
+          </nav>
+        </div>
+    
+        <div class="btn-add-wrapper">
+          <button
+          pButton
+          pRipple
+          label="Thêm mới"
+          style="height: 40px; width: 130px; border-radius: 10px;"
+        ></button>
+        </div>
+    </div>
+    <div class="toast-container">
+        <p-messages
+          [(value)]="messages"
+          [enableService]="false"
+          [closable]="false"
+        ></p-messages>
+    </div>
+
+    <section class="section k-list-table">
+        <div class="row">
+            <div class="col-lg-12">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-lg-4 mt-3">
+                    <span class="p-input-icon-left" style="width: 100%">
+                      <i class="pi pi-search"></i>
+                      <input
+                        type="text"
+                        class="form-control"
+                        
+                        placeholder="Tìm kiếm theo tên, mã nhân viên"
+                        style="padding-left: 30px; height: 38px"
+                        
+                        #searchInput
+                      />
+                    </span>
+                  </div>
+                  <div class="col-lg-4 mt-3">
+                    <p-dropdown
+                    [style]="{ height: '38px', width: '100%' }"
+                    [options]="Roles"
+                    optionLabel="name"
+                    [showClear]="true"
+                    placeholder="Chọn nhóm quyền"
+                    optionValue="id"
+                    [(ngModel)]="selectedRoleGroupId">
+                  </p-dropdown>
+                  </div>
+                  <div class="col-lg-4 mt-3">
+                    <button
+                      pButton
+                      pRipple
+                      label="Lọc"
+                      class="buttonfilter"
+                      
+                    ></button>
+                  </div>
+                </div>
+                <div style="margin-top: 15px" class="card">
+                  <p-table
+                    [value]=""
+                    [paginator]="true"
+                    [rows]="pageSize"
+                    [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
+                    [paginator]="false"
+                    (onPage)="onPageChange($event)"
+                    styleClass="p-datatable-striped"
+                  >
+                    <ng-template pTemplate="header">
+                      <tr>
+                        <!-- <th style="width: 10%">
+                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
+                        </th> -->
+                        <th style="width: 10%">Mã</th>
+                        <th style="width: 20%">Tên danh mục</th>
+                        <th style="width: 15%">Trực thuộc</th>
+                        <th style="width: 10%">Cấp</th>
+                        <th style="width: 10%">Người tạo</th>
+                        <th style="width: 10%">Trạng thái</th>
+                        <th>Ẩn/Hiện</th>
+                        <th style="width: 10%">Thao tác</th>
+                      </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-category>
+                      <tr>
+                        <!-- <td>
+                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
+                        </td> -->
+                        <td>{{ category.id }}</td>
+                        <td>{{ category.name }}</td>
+                        <td>{{ category.parentName }}</td>
+                        <td>{{ category.level }}</td>
+                        <td>{{ category.crateName }}</td>
+                        <td [style.color]="category.status === 1 ? 'green' : 'red'">
+                          {{ category.status === 1 ? "Hoạt động" : "Ẩn" }}
+                        </td>
+                        <td>
+                          <p-inputSwitch
+                            name="switchControl"
+                            [ngModel]="category.status === 1 ? true : false"
+                            (ngModelChange)="
+                              updateStatus(category.id, $event ? 1 : 0)
+                            "
+                            [disabled]="true"
+                          ></p-inputSwitch>
+                        </td>
+                        <!-- <td class="text-center">
+                          <a (click)="editCategory(category.id)">
+                            <i
+                              class="pi pi-pencil"
+                              style="font-size: 1.2rem; text-align: center"
+                            ></i>
+                          </a>
+                        </td> -->
+                        <td>
+                          <div class="flex">
+                              <button
+                                  pButton
+                                  pRipple
+                                  icon="pi pi-pencil"
+                                  class="p-button-rounded p-button-success mr-2"
+                                  (click)="editCategory(category.id)"
+                              ></button>
+                              <button
+                                  pButton
+                                  pRipple
+                                  icon="pi pi-trash"
+                                  class="p-button-rounded p-button-warning"
+                                  (click)="deleteProduct(product)"
+                              ></button>
+                          </div>
+                      </td>
+                      </tr>
+                    </ng-template>
+                  </p-table>
+                  <div>
+                    <p-paginator
+                      [rows]="pageSize"
+                      (onPageChange)="onPageChange($event)"
+                      [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
+                      [rowsPerPageOptions]="[10, 20, 30]"
+                    ></p-paginator>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="dialog-background" *ngIf="showDialog">
+          <div class="dialog-container-customer">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 style="font-weight: 600; font-size: 17px;" class="card-title">Thông tin cơ bản</h5>
+                <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" [style]="{'border-radius': '25%'}" (click)="closeDialog()"></p-button>
+              </div>
+              <!-- General Form Elements -->
+              <form [formGroup]="RoleGroupForm" (ngSubmit)="onSubmit()">
+                <div class="row mb-12">
+                  <div style="margin-bottom: 20px;" class="col-lg-12" formGroupName="userRegist">
+                      <label class="labelip">Nhóm quyền<span class="red-asterisk">*</span></label>
+                      <p-dropdown
+                      [style]="{ height: '35px', width: '100%' }"
+                      [options]="Roles"
+                      optionLabel="name"
+                      [showClear]="true"
+                      placeholder="Chọn nhóm quyền"
+                      optionValue="id"
+                      formControlName="roleGroupId"
+                      ></p-dropdown>
+                      <div
+                      *ngIf="
+                        (RoleGroupForm.get('userRegist.roleGroupId')?.invalid &&
+                          (RoleGroupForm.get('userRegist.roleGroupId')?.dirty ||
+                            RoleGroupForm.get('userRegist.roleGroupId')?.touched)) ||
+                        showNameError
+                      "
+                    >
+                      <div
+                        *ngIf="RoleGroupForm.get('userRegist.roleGroupId')?.errors?.['required']"
+                        class="error-message"
+                      >
+                        Nhóm quyền không được bỏ trống
+                      </div>
+                    </div>
+                  </div>
+                  <div style="margin-bottom: 20px;" class="col-lg-12">
+                    <div class="row">
+                      <div class="col-lg-6" formGroupName="userRegist">
+                        <label class="labelip"
+                        >Tài khoản<span class="red-asterisk">*</span></label>
+                          <input
+                          type="text"
+                          class="form-control"
+                          pInputText
+                          [style]="{ height: '35px', width: '95%' }"
+                          formControlName="userName"
+                          placeholder="Nhập tài khoản"
+                          (input)="onInputChange($event)"
+                          />
+                          <div *ngIf="RoleGroupForm.get('userRegist.userName')?.invalid && (RoleGroupForm.get('userRegist.userName')?.dirty || RoleGroupForm.get('userRegist.userName')?.touched) || showNameError3">
+                            <small style="color: red;" *ngIf="RoleGroupForm.get('userRegist.userName')?.errors?.['required']">Tài khoản là bắt buộc.</small>
+                            <small style="color: red;" *ngIf="RoleGroupForm.get('userRegist.userName')?.errors?.['pattern']">Tài khoản chỉ được chứa chữ và số.</small>
+                            <small style="color: red;" *ngIf="RoleGroupForm.get('userRegist.userName')?.errors?.['minlength']">Tài khoản phải lớn hơn hoặc bằng 6 ký tự</small>
+                          </div>
+                          <div *ngIf="errorMessage" class="error-message">
+                            {{ errorMessage }}
+                          </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <label class="labelip"
+                        >Họ tên nhân viên<span class="red-asterisk">*</span></label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        pInputText
+                        [style]="{ height: '35px', width: '95%' }"
+                        formControlName="name"
+                        placeholder="Nhập tên nhân viên"
+                        maxlength="100"
+                        (input)="onInputChange($event)"
+                      />
+                      <div
+                      *ngIf="
+                        (RoleGroupForm.get('name')?.invalid &&
+                          (RoleGroupForm.get('name')?.dirty ||
+                            RoleGroupForm.get('name')?.touched)) || showNameError2
+                      "
+                      >
+                      <!-- <div
+                        *ngIf="RoleGroupForm.get('name')?.errors?.['required']"
+                        class="error-message"
+                      >
+                          Bạn vui lòng nhập tên hàng hóa
+                      </div> -->
+                      <div
+                        *ngIf="RoleGroupForm.get('name')?.errors?.['minlength']  && !isWhitespace(RoleGroupForm.get('name')?.value)"
+                        class="error-message"
+                      >
+                        Tên nhân viên phải lớn hơn hoặc bằng 6 ký tự
+                      </div>
+                      <div class="error-message" *ngIf="RoleGroupForm.controls['name'].hasError('whitespace')">
+                        {{ getErrorMessage() }}
+                      </div>
+                    </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <div class="row">
+                      <div class="col-lg-6">
+                          <div class="row">
+                            <label class="labelip">Ngày sinh</label>
+                            <p-calendar
+                              [showIcon]="true"
+                              [style]="{ height: '35px', width: '100%' }"
+                              dateFormat="dd/mm/yy"
+                              formControlName="dayOfBirth"
+                              [showClear]="true"
+                              placeholder="Chọn ngày sinh"
+                            ></p-calendar>
+                          </div>
+                          <div
+                            *ngIf="
+                              RoleGroupForm.get('dayOfBirth')?.invalid &&
+                              (RoleGroupForm.get('dayOfBirth')?.dirty ||
+                                RoleGroupForm.get('dayOfBirth')?.touched)
+                            "
+                          >
+                            <div
+                              *ngIf="RoleGroupForm.get('dayOfBirth')?.errors?.['invalidDateOfBirth']"
+                              class="error-message"
+                            >
+                              Ngày sinh phải nhỏ hơn hoặc bằng ngày hiện tại.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <label class="labelip"
+                            >Số điện thoại</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            pInputText
+                            [style]="{ height: '35px', width: '100%' }"
+                            (keypress)="onKeyPress($event)"
+                            formControlName="phoneNumber"
+                            placeholder="Nhập số điện thoại"
+                          />
+                          <div *ngIf="showNameError4" class="error-message">
+                            Số điện thoại không được trùng nhau
+                          </div>
+                          <div
+                            *ngIf="
+                              (RoleGroupForm.get('phoneNumber')?.invalid &&
+                                (RoleGroupForm.get('phoneNumber')?.dirty ||
+                                  RoleGroupForm.get('phoneNumber')?.touched)) ||
+                              showNameError5
+                            "
+                          >
+                            <div
+                              *ngIf="RoleGroupForm.get('phoneNumber')?.errors?.['pattern']"
+                              class="error-message"
+                            >
+                              Số điện thoại phải bắt đầu bằng 03, 05, 07, 08, hoặc 09 và có
+                              10 chữ số.
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-12 mt-5">
+                  <div class="col-sm-12 buttonsl">
+                      <button pButton pRipple label="Hủy" class="p-button-success buttoncloses" type="button" (click)="closeDialog()"></button>
+                      <button pButton pRipple label="Lưu" class="p-button-success butttonsave" type="submit"></button>
+                  </div>
+                </div>
+              </form><!-- End General Form Elements -->
+            </div>
+          </div>
+        </div>
+    </section>
+
+
+</main>
